--- a/gol.css
+++ b/gol.css
@@ -4,11 +4,14 @@
 }
 
 td {
-  font-family: "Lucida Console", "Courier New", monospace;
   padding: 8px;
   text-align: center;
 }
 
 td:hover {
   background-color: coral;
+}
+
+body {
+  font-family: "Lucida Console", "Courier New", monospace;  
 }
