--- a/gol.css
+++ b/gol.css
@@ -1,22 +1,28 @@
 #gameboard {
-  border: 1px solid;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 1px;
 }
 
 td {
-  padding: 8px;
-  text-align: center;
-  aspect-ratio: 1 / 1 ;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1 / 1;
 }
+
 td .content {
-  aspect-ratio: 1 / 1 ;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1 / 1;
 }
 
 td:hover {
   background-color: coral;
 }
 
-body {
-  font-family: "Lucida Console", "Courier New", monospace;  
+html, body {
+  font-family: "Lucida Console", "Courier New", monospace; 
 }
 
 .on {
