--- a/gol.css
+++ b/gol.css
@@ -1,28 +1,27 @@
+html, body {
+  margin: 0;
+  height: 100%;
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+
 #gameboard {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  gap: 1px;
+  width: 500vw;
+  height: 500vh;
 }
 
 td {
-  padding: 0;
-  width: 100%;
-  height: 100%;
+  border: 1px solid #ccc;
+  background-color: #f0f0f0;
   aspect-ratio: 1 / 1;
-}
-
-td .content {
-  width: 100%;
-  height: 100%;
-  aspect-ratio: 1 / 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s;
 }
 
 td:hover {
   background-color: coral;
-}
-
-html, body {
-  font-family: "Lucida Console", "Courier New", monospace; 
 }
 
 .on {
