--- a/gol.css
+++ b/gol.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 td {
-  border: 1px solid #ccc;
+  padding: 4px;
   background-color: #f0f0f0;
   aspect-ratio: 1 / 1;
   display: flex;
