--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .button:hover {
-  box-shadow:0 8px 16px 0 rgba(0,0,0,0.6)
+  box-shadow:0 8px 16px 0 rgba(0,0,0,0.6);
   background-color: black;
   color:white;
 }
