--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-.button:hover {
+button:hover {
   box-shadow:0 8px 16px 0 rgba(0,0,0,0.6);
   background-color: black;
   color:white;
 }
 
-.button {
+button {
   background-color: gray;
   color: black;
   border: none;
