--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ button {
   transition-duration: 0.4s;
   margin-left: 10px;
   margin-right: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .button-group {
