--- a/text-adv.css
+++ b/text-adv.css
@@ -1,14 +1,17 @@
 body {
   background-color: black;
   color: white;
+  font-size: 16px;
 }
 input {
   font-family: inherit;
   border: none;
   background-color: black;
   color: white;
-  position: fixed;
-  bottom: 0;
-  left: 0; 
   width: 100%;
+  font-size: 16px;
+}
+
+input:focus {
+  border: none;
 }
