--- a/text-adv.css
+++ b/text-adv.css
@@ -7,7 +7,7 @@ input {
   font-family: inherit;
   border: none;
   background-color: black;
-  color: #16F5E2;
+  color: #16F529;
   width: 100%;
   font-size: 16px;
 }
