--- a/text-adv.css
+++ b/text-adv.css
@@ -3,13 +3,15 @@ body {
   color: #16F529;
   font-size: 16px;
 }
-input {
+
+#prompt_input {
   font-family: inherit;
   border: none;
   background-color: black;
   color: #16F529;
-  width: 100%;
   font-size: 16px;
+  flex: 1; 
+  width: auto; 
 }
 
 input:focus {
@@ -18,5 +20,16 @@ input:focus {
 
 .prompt {
   display: flex;
+}
+
+.prompt form {
+  display: flex;
   flex-direction: row;
+  align-items: center;
+  width: 100%;
+}
+
+#prompt_label {
+  margin-right: 0.5em;
+  white-space: nowrap;
 }
