--- a/text-adv.css
+++ b/text-adv.css
@@ -27,6 +27,9 @@ input:focus {
   flex-direction: row;
   align-items: center;
   width: 100%;
+  padding: none;
+  marging: none;
+  border: none;
 }
 
 #prompt_label {
