--- a/text-adv.css
+++ b/text-adv.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   color: #16F529;
-  font-size: 16px;
+  font-size: 0px;
 }
 
 #prompt_input {
@@ -36,3 +36,8 @@ input:focus {
   margin-right: 0.5em;
   white-space: nowrap;
 }
+
+#output {
+  font-size: 16px;
+}
+
