--- a/text-adv.css
+++ b/text-adv.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   color: #16F529;
-  font-size: 0px;
+  font-size: 16px;
 }
 
 #prompt_input {
@@ -28,7 +28,7 @@ input:focus {
   align-items: center;
   width: 100%;
   padding: none;
-  marging: none;
+  margin-top: -16px;
   border: none;
 }
 
