--- a/gol/gol.css
+++ b/gol/gol.css
@@ -5,7 +5,7 @@
 
 td {
   background-color: white;
-  transition: background-color 0.5s
+  transition: background-color 0.5s;
   padding: 8px;
   text-align: center;
 }
