random css shit

--- a/aMessage/login.css
+++ b/aMessage/login.css
@@ -10,6 +10,20 @@ form {
 }
 
 .submit_button {
+  margin: 5px;
   background-color: #14f170;
   color: white;
+}
+label {
+  margin: 5px;
+  padding: 5px;
+}
+input {
+  margin: 5px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+input:focus {
+  outline-color: #14f170;
 }
